Refactor app configuration, enhance authentication context, and improve user experience
- Updated app configuration to use new PNG assets for icons and splash images, improving visual consistency.
- Enhanced StyledAppTitle component with updated font sizes and text shadow properties for better aesthetics.
- Refactored ThemeToggle component to include animated theme switching and improved icon handling.
- Updated AuthContext to manage user onboarding status and profile updates more effectively.
- Improved navigation structure to streamline user flow through authentication and onboarding screens.
- Enhanced i18n translations for better branding and user engagement across multiple languages.

--- a/src/i18n/translations/en.json
+++ b/src/i18n/translations/en.json
@@ -185,7 +185,7 @@
   },
   "auth": {
     "welcome": {
-      "title": "Welcome to AICura",
+      "title": "Welcome to AICura™",
       "description": "Your Intelligent Healthcare Companion",
       "subtitle": "Experience the Future of Healthcare",
       "login": "Sign In",
@@ -197,7 +197,7 @@
       "tagline": "Smart Health • Better Life"
     },
     "login": {
-      "title": "Welcome Back to AICura",
+      "title": "Welcome Back to AICura™",
       "description": "Your health journey continues here",
       "email": "Email Address",
       "emailPlaceholder": "Enter your email address",
@@ -216,7 +216,7 @@
       }
     },
     "signup": {
-      "title": "Join AICura Today",
+      "title": "Join AICura™ Today",
       "description": "Start your personalized health journey",
       "subtitle": "Your wellness, our priority",
       "name": "Full Name",
