Refactor language management and navigation flow
- Removed LanguageToggle component to streamline language selection process.
- Enhanced LanguageSelector component to handle language changes and navigation more effectively.
- Updated SplashScreen to direct users to LanguageSelection if no language is set.
- Improved LanguageSelectionScreen layout and integrated ThemeHeader for better user experience.
- Refactored i18n configuration to simplify language change handling and storage.
- Added new translations for improved multilingual support in the app.

--- a/src/i18n/translations/en.json
+++ b/src/i18n/translations/en.json
@@ -181,7 +181,8 @@
     "submit": "Submit",
     "retry": "Retry",
     "warning": "Warning",
-    "info": "Information"
+    "info": "Information",
+    "tagline": "The Future AI Doctor at your fingertips"
   },
   "auth": {
     "welcome": {
